apps/base/monitoring-nginx-exporter/deploy/daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-exporter
      app.kubernetes.io/component: nginx-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-exporter
        app.kubernetes.io/component: nginx-exporter
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # random uid
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: nginx-exporter
        image: registry.lan/nginx-prometheus-exporter:1.1.0
        imagePullPolicy: IfNotPresent
        args:
        - -nginx.scrape-uri
        - http://$(NODE_IP):81/status
        ports:
        - containerPort: 9113
          name: metrics
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /metrics
            port: metrics
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 32Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/loadbalancer: 'yes'
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
