apps/base/monitoring-nginx-exporter/deploy/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter-prometheus
  labels:
    prometheus-target: nginx-exporter
spec:
  ports:
    - port: 9113
      name: metrics
      targetPort: metrics
  selector:
    app.kubernetes.io/name: nginx-exporter
    app.kubernetes.io/component: nginx-exporter
